[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ip2geoapi"
version = "1.0.0"
description = "Official Python SDK for the Ip2Geo API"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Vijay Prajapati" }
]
requires-python = ">=3.8"
dependencies = [
  "requests>=2.25"
]

[project.urls]
Homepage = "https://ip2geoapi.com"
Documentation = "https://ip2geoapi.com/docs"
Source = "https://github.com/vijaykrpp/ip2geo-python"
